
01/06/2011 10:33 PDT
--------------------

Added to github, fixed up a few organisational things.
Removed nanoxml and moved to Processing's own XML parser.


10/03/2007 10:40 CST
--------------------

Updated for Processing 0123+ (PApplet.reader became PApplet.createReader)


10/02/2006 09:55 GMT
--------------------

Initial release on processinghacks.com.

