@@ -1,3 +1,7 @@
+09/02/2011 13:27 PST
+--------------------
+
+Updated for Processing 2.0+, closes #2.
 
 01/06/2011 10:33 PDT
 --------------------
